repo-agent/k8s/registry.yaml
# Copyright 2026 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: container-registry
  namespace: repo-agent-system
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: container-registry
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: container-registry
  namespace: repo-agent-system
spec:
  serviceName: "container-registry"
  replicas: 1
  selector:
    matchLabels:
      app: container-registry
  template:
    metadata:
      labels:
        app: container-registry
    spec:
      containers:
      - name: registry
        image: ko://services/container-registry/cmd/container-registry
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 20Gi
